--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<!DOCTYPE html>
-
-<header>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Khamis HomePage</title>
+</head>
+<body>
+    <header>
      
         <div name="mybanner" 
             width="100%" 
@@ -12,8 +17,8 @@
         </h3>
             <h3><strong>King AbdulAziz University Jeddah</strong></h3>
 
-           <a href="#homePage" class=""> <input type="button" value="Home" ></a>
-            <input type="button" value="HomeWork">
+           <a href="index.html" class=""> <input type="button" value="Home" ></a>
+            <a href="Homework.html" class=""><input type="button" value="HomeWork"></a>
             <input type="button" value="Semeter Project">
             <select name="Courses" id="">
                 <option selected>Selected</option>
@@ -25,24 +30,37 @@
         </div>
   </header>
 
-<body >
-<div class="homepage" id="homePage" style="margin-left: 220px; background-color:#771212; max-width: 50%;">
-        <div style="margin-left: 120px;">
-            <H2>Muhammad Khamis CPIT405 Home Page</H2>
-        </div>  
-    <ul>
-        <li>
-            <strong class="">Educational Background:</strong>
-        </li>
-        <h6>Bsc Information Technology (In view)</h6>
-        <h6>High School Certificate</h6>
+  <div class="homepage" id="homePage" style="padding-left: 220px; background-color:#6b7397; max-width: 100%;">
+    <div style="margin-left: 120px;">
+        <H2>Muhammad Khamis CPIT405 Home Page</H2>
+    </div>  
+<ul>
+    <li>
+        <strong class="">Educational Background:</strong>
+    <p>Bsc Information Technology (In view)</p>
+    <p>High School Certificate</p>
+    </li>
+    <li><strong>Email Address:</strong>
+    <a href="#" class="">muhdkhamis1@gmail.com</a>
+    </li>
+    <li>
+        <strong>Hobbies:</strong>
+        Travelling, Poetry, Watching.
+    </li>
+    <li>
+        <strong>Field of Interest:</strong>
+        Software Development, Data Mining and Processing, Project Managment.
+    </li>
 
-    </ul>
-    <ul>
-        <li><strong>Email Address</strong></li>
-        <h6>muhdkhamis1@gmail.com</h6>
-    </ul>
+</ul>
+
 </div>
+</body>
+</html>
+
+
+<!-- <body style="background-color: 6b7397;justify-content: center;">
+
     
 
-</body>
+</body> -->
