--- a/Homework.html
+++ b/Homework.html
@@ -35,8 +35,8 @@
         <H2>CPIT 405 Home Work</H2>
     </div>  
 
-<h4><a href="homework1.html" class="">HomeWork#1</a></h4>
-<h4><a href="Homework2.html" class="">HomeWork#2</a></h4>
+<h4><a href="homeAssignmet.html" class="">HomeWork#1</a></h4>
+<h4><a href="Takehome.html" class="">HomeWork#2</a></h4>
     <p><a href="index.html" class="">
     <img src="img/home.png" alt="go back to homepage" height="25px" width="25px">
     <br>
