--- a/Homework.html
+++ b/Homework.html
@@ -37,6 +37,7 @@
 
 <h4><a href="homeAssignmet.html" class="">HomeWork#1</a></h4>
 <h4><a href="Takehome.html" class="">HomeWork#2</a></h4>
+      <h4><a href="kabsa.html">Assignemnt#2</a></h4>
     <p><a href="index.html" class="">
     <img src="img/home.png" alt="go back to homepage" height="25px" width="25px">
     <br>
